# src/dto/game.dto.ts
@@ -5,3 +5,14 @@ export interface GameDTO {
   title: string;
   console: ConsoleDTO;
 }
+
+export interface Game_CreateDTO {
+  title: string;
+  console_id : number;
+}
+
+export interface Game_UpdateDTO {
+  id? : number,
+  title: string;
+  console_id : number;
+}
